Pivot to AI Trust scorecard analysis

--- a/public/cancel.html
+++ b/public/cancel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Sales · Checkout Cancelled</title>
+  <title>AI Trust · Checkout Cancelled</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
 <body>
   <div class="card">
     <h1>Checkout cancelled</h1>
-    <p>No stress—your space remains on the free plan. If you require help evaluating your app, you can keep chatting with AI Sales or try the upgrade again whenever you feel like you’re ready.</p>
+    <p>No stress—your space remains on the free plan. If you require help evaluating your app, you can keep chatting with AI Trust or try the upgrade again whenever you feel like you’re ready.</p>
     <a class="button" href="/">Return to keep building apps</a>
   </div>
 </body>
