--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Sales · Privacy Policy</title>
+  <title>AI Trust · Privacy Policy</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
     <h1>Privacy Policy</h1>
     <p>Last updated: <strong>October 30, 2024</strong></p>
     <p>
-      AI Sales provides advisory tooling for web and app builders. This policy explains how we handle the information you share while using the app.
+      AI Trust provides advisory tooling for web and app builders. This policy explains how we handle the information you share while using the app.
     </p>
 
     <h2>Information we process</h2>
