--- a/public/success.html
+++ b/public/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Sales · Checkout Success</title>
+  <title>AI Trust · Checkout Success</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Welcome to AI Sales App Builder</h1>
+    <h1>Welcome to AI Trust App Builder</h1>
     <p>Your workspace is now set up for the extended builder experience with exports, personalised follow-ups, and priority feedback. Congratulations!</p>
     <a class="button" href="/">Return to keep building apps</a>
   </div>
