--- a/public/terms.html
+++ b/public/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Sales · Terms of Service</title>
+  <title>AI Trust · Terms of Service</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -55,12 +55,12 @@
 
     <h2>Acceptance of terms</h2>
     <p>
-      By accessing or using AI Sales, you agree to these Terms of Service and all referenced policies. If you do not agree, do not use the service.
+      By accessing or using AI Trust, you agree to these Terms of Service and all referenced policies. If you do not agree, do not use the service.
     </p>
 
     <h2>Services</h2>
     <p>
-      AI Sales provides AI-powered advisory tooling and optional builder exports. We may update, suspend, or discontinue features at any time.
+      AI Trust provides AI-powered advisory tooling and optional builder exports. We may update, suspend, or discontinue features at any time.
     </p>
 
     <h2>Accounts and access</h2>
@@ -72,7 +72,7 @@
     <ul>
       <li>No unlawful, harmful, or abusive content.</li>
       <li>No reverse engineering or attempts to breach security.</li>
-      <li>Do not use AI Sales to generate misleading or deceptive experiences.</li>
+      <li>Do not use AI Trust to generate misleading or deceptive experiences.</li>
     </ul>
 
     <h2>Payment and billing</h2>
@@ -82,17 +82,17 @@
 
     <h2>Intellectual property</h2>
     <p>
-      You retain ownership of the content you provide. AI Sales retains rights to its software and branding. Outputs you generate can be used for your own business unless stated otherwise.
+      You retain ownership of the content you provide. AI Trust retains rights to its software and branding. Outputs you generate can be used for your own business unless stated otherwise.
     </p>
 
     <h2>Disclaimers</h2>
     <p>
-      AI Sales provides guidance “as-is” without warranties of accuracy or fitness. You are responsible for verifying advice before implementing it in production.
+      AI Trust provides guidance “as-is” without warranties of accuracy or fitness. You are responsible for verifying advice before implementing it in production.
     </p>
 
     <h2>Limitation of liability</h2>
     <p>
-      To the maximum extent permitted by law, AI Sales will not be liable for indirect or consequential damages arising from use of the service.
+      To the maximum extent permitted by law, AI Trust will not be liable for indirect or consequential damages arising from use of the service.
     </p>
 
     <h2>Termination</h2>
