--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Sales Advisor</title>
+  <title>AI Trust Advisor</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
   <div id="app"></div>
   <footer style="margin-top: 48px; padding: 24px 0; text-align: center; font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 12px; color: #6f768c;">
-    By using AI Sales you agree to our <a href="/privacy" style="color: inherit; text-decoration: none; font-weight: 600;">Privacy Policy</a> and <a href="/terms" style="color: inherit; text-decoration: none; font-weight: 600;">Terms</a>.
+    By using AI Trust you agree to our <a href="/privacy" style="color: inherit; text-decoration: none; font-weight: 600;">Privacy Policy</a> and <a href="/terms" style="color: inherit; text-decoration: none; font-weight: 600;">Terms</a>.
   </footer>
   <script defer src="app.js"></script>
 </body>
