--- a/public/success.html
+++ b/public/success.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Trust · Checkout Success</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
+  <title>AI Trust · Confidence Report Ready</title>
   <style>
+    :root {
+      color-scheme: dark;
+    }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       min-height: 100vh;
@@ -15,51 +18,182 @@
       align-items: center;
       justify-content: center;
       font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: linear-gradient(180deg, #f9fafc 0%, #eff1f8 100%);
-      color: #111029;
+      background: #000000;
+      color: rgba(255, 255, 255, 0.92);
+      padding: 48px 24px;
     }
     .card {
-      max-width: 480px;
+      max-width: 760px;
       width: 100%;
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 28px 64px rgba(18, 25, 69, 0.12);
-      padding: 36px;
-      text-align: center;
+      border-radius: 28px;
+      border: 1px solid rgba(255, 255, 255, 0.14);
+      background: rgba(255, 255, 255, 0.04);
+      padding: 44px;
+      display: grid;
+      gap: 24px;
+      text-align: left;
     }
     .card h1 {
-      margin: 0 0 16px;
-      font-size: 28px;
+      margin: 0;
+      font-size: clamp(30px, 4.5vw, 44px);
       font-weight: 600;
+      color: #ffffff;
     }
     .card p {
-      margin: 0 0 24px;
-      font-size: 15px;
-      line-height: 1.6;
-      color: #3a4663;
+      margin: 0;
+      font-size: 18px;
+      line-height: 1.7;
+      color: rgba(255, 255, 255, 0.72);
     }
-    a.button {
+    .actions,
+    .footer-actions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      align-items: center;
+    }
+    .cta,
+    .ghost {
+      min-width: 0;
+      border-radius: 999px;
+      padding: 14px 28px;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: transform 0.2s ease, opacity 0.2s ease;
+      border: none;
+    }
+    .cta {
+      background: #ffffff;
+      color: #030303;
+    }
+    .cta[disabled] {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+    .ghost {
+      background: transparent;
+      color: rgba(255, 255, 255, 0.72);
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      text-decoration: none;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      border-radius: 999px;
-      padding: 12px 22px;
-      background: #4e5cf0;
-      color: white;
-      font-weight: 600;
-      text-decoration: none;
-      transition: transform 0.15s ease;
     }
-    a.button:hover {
+    .cta:hover:not([disabled]),
+    .ghost:hover {
       transform: translateY(-1px);
+    }
+    .viewer {
+      width: 100%;
+      min-height: 360px;
+      border-radius: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.14);
+      background: rgba(255, 255, 255, 0.02);
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+    }
+    .viewer iframe,
+    .viewer embed {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.02);
+    }
+    .viewerPlaceholder {
+      color: rgba(255, 255, 255, 0.55);
+      font-size: 16px;
+      text-align: center;
+      line-height: 1.6;
+    }
+    .status-text {
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.5);
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>Welcome to AI Trust App Builder</h1>
-    <p>Your workspace is now set up for the extended builder experience with exports, personalised follow-ups, and priority feedback. Congratulations!</p>
-    <a class="button" href="/">Return to keep building apps</a>
+    <div>
+      <h1>Your confidence report is ready.</h1>
+      <p>The snapshot below captures the personalised trust scorecard you unlocked. Download the PDF to brief your team, share with stakeholders, or start iterating immediately.</p>
+    </div>
+    <div class="viewer" id="viewer">
+      <div class="viewerPlaceholder" id="viewer-placeholder">Preparing your AI Trust report…</div>
+    </div>
+    <div class="actions">
+      <button type="button" class="cta" data-action="download-report">Download PDF</button>
+      <a class="ghost" href="/">Back to AI Trust</a>
+    </div>
+    <div class="status-text" id="viewer-status">This preview refreshes every time you regenerate a report.</div>
   </div>
+  <script>
+    const downloadButton = document.querySelector('[data-action="download-report"]');
+    const viewer = document.getElementById('viewer');
+    const placeholder = document.getElementById('viewer-placeholder');
+    const status = document.getElementById('viewer-status');
+
+    async function fetchReportBlob() {
+      const response = await fetch('/api/reports/download');
+      if (!response.ok) {
+        const body = await response.json().catch(() => ({}));
+        throw new Error(body.message || 'Download unavailable.');
+      }
+      return response.blob();
+    }
+
+    async function renderInlineReport() {
+      try {
+        const blob = await fetchReportBlob();
+        const url = URL.createObjectURL(blob);
+
+        viewer.innerHTML = '';
+        const iframe = document.createElement('iframe');
+        iframe.src = url;
+        iframe.title = 'AI Trust Confidence Report';
+        viewer.appendChild(iframe);
+
+        return url;
+      } catch (error) {
+        if (placeholder) {
+          placeholder.textContent = error.message || 'Report preview unavailable.';
+        } else if (viewer) {
+          viewer.innerHTML = `<div class="viewerPlaceholder">${error.message || 'Report preview unavailable.'}</div>`;
+        }
+        if (status) status.textContent = 'Try refreshing the page or downloading directly.';
+        throw error;
+      }
+    }
+
+    if (downloadButton) {
+      downloadButton.addEventListener('click', async () => {
+        if (downloadButton.disabled) return;
+        downloadButton.disabled = true;
+        downloadButton.textContent = 'Preparing download…';
+        try {
+          const blob = await fetchReportBlob();
+          const url = URL.createObjectURL(blob);
+          const link = document.createElement('a');
+          link.href = url;
+          link.download = 'ai-trust-build-plan.pdf';
+          document.body.appendChild(link);
+          link.click();
+          link.remove();
+          URL.revokeObjectURL(url);
+        } catch (error) {
+          alert(error.message);
+        } finally {
+          downloadButton.disabled = false;
+          downloadButton.textContent = 'Download PDF';
+        }
+      });
+    }
+
+    renderInlineReport().catch(() => {});
+  </script>
 </body>
 </html>
