--- a/public/cancel.html
+++ b/public/cancel.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Trust · Checkout Cancelled</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
   <style>
+    :root { color-scheme: dark; }
     body {
       margin: 0;
       min-height: 100vh;
@@ -15,40 +13,46 @@
       align-items: center;
       justify-content: center;
       font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background: linear-gradient(180deg, #f9fafc 0%, #eff1f8 100%);
-      color: #111029;
+      background: #000000;
+      color: rgba(255, 255, 255, 0.9);
+      padding: 48px 24px;
     }
     .card {
       max-width: 480px;
       width: 100%;
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 28px 64px rgba(18, 25, 69, 0.12);
-      padding: 36px;
+      padding: 40px;
+      border-radius: 28px;
+      border: 1px solid rgba(255, 255, 255, 0.14);
+      background: rgba(255, 255, 255, 0.04);
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
     }
-    .card h1 {
-      margin: 0 0 16px;
-      font-size: 28px;
+    h1 {
+      margin: 0;
+      font-size: clamp(26px, 4vw, 34px);
       font-weight: 600;
+      color: #ffffff;
     }
-    .card p {
-      margin: 0 0 24px;
-      font-size: 15px;
-      line-height: 1.6;
-      color: #3a4663;
+    p {
+      margin: 0;
+      font-size: 16px;
+      line-height: 1.7;
+      color: rgba(255, 255, 255, 0.72);
     }
     a.button {
       display: inline-flex;
       align-items: center;
       justify-content: center;
+      padding: 14px 28px;
       border-radius: 999px;
-      padding: 12px 22px;
-      background: #4e5cf0;
-      color: white;
+      background: #ffffff;
+      color: #050505;
+      font-size: 15px;
       font-weight: 600;
       text-decoration: none;
-      transition: transform 0.15s ease;
+      transition: transform 0.2s ease;
     }
     a.button:hover {
       transform: translateY(-1px);
@@ -58,8 +62,8 @@
 <body>
   <div class="card">
     <h1>Checkout cancelled</h1>
-    <p>No stress—your space remains on the free plan. If you require help evaluating your app, you can keep chatting with AI Trust or try the upgrade again whenever you feel like you’re ready.</p>
-    <a class="button" href="/">Return to keep building apps</a>
+    <p>No worries. Your workspace remains on the free tier, and you can restart checkout whenever you’re ready to unlock exportable build plans, experiments, and advisor support.</p>
+    <a class="button" href="/">Back to AI Trust</a>
   </div>
 </body>
 </html>
