Finalize AI Trust branding, README, and domain config

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -85,12 +85,12 @@
 
     <h2>Your rights</h2>
     <p>
-      You can request access, correction, or deletion of your data by emailing <a href="mailto:support@aisales.com">support@aisales.com</a>. If you are located in the EU/EEA or UK, you may also object to processing or ask for data portability.
+      You can request access, correction, or deletion of your data by emailing <a href="mailto:support@aitrust.com">support@aitrust.com</a>. If you are located in the EU/EEA or UK, you may also object to processing or ask for data portability.
     </p>
 
     <h2>Contact</h2>
     <p>
-      Questions? Contact us at <a href="mailto:support@aisales.com">support@aisales.com</a>.
+      Questions? Contact us at <a href="mailto:support@aitrust.com">support@aitrust.com</a>.
     </p>
   </main>
 </body>
