--- a/public/terms.html
+++ b/public/terms.html
@@ -107,7 +107,7 @@
 
     <h2>Contact</h2>
     <p>
-      Questions? Email <a href="mailto:support@aisales.com">support@aisales.com</a>.
+      Questions? Email <a href="mailto:support@aitrust.com">support@aitrust.com</a>.
     </p>
   </main>
 </body>
