Refresh AI Trust legal copy, domain config, and checkout defaults

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -58,15 +58,15 @@
 
     <h2>Information we process</h2>
     <ul>
-      <li><strong>Conversation data:</strong> prompts you send and AI responses we return.</li>
-      <li><strong>Uploads:</strong> screenshots or files you provide for analysis.</li>
+      <li><strong>Conversation data:</strong> prompts you send and the responses we return.</li>
+      <li><strong>Uploads:</strong> screenshots or files you provide for analysis. During this phase uploads are used to contextualise template-based recommendations and are deleted once the report is generated.</li>
       <li><strong>Subscription details:</strong> name, email, and billing information supplied during checkout.</li>
       <li><strong>Usage metrics:</strong> anonymized analytics (page views, interactions) when enabled.</li>
     </ul>
 
     <h2>How we use it</h2>
     <ul>
-      <li>Generate AI recommendations tailored to your app or website.</li>
+      <li>Generate heuristic recommendations tailored to your app or website.</li>
       <li>Improve product quality, triage issues, and monitor service performance.</li>
       <li>Provide customer support and respond to requests.</li>
       <li>Process payments and manage subscriptions via Stripe.</li>
@@ -80,17 +80,17 @@
 
     <h2>Third-party services</h2>
     <p>
-      We rely on infrastructure and AI providers (such as OpenAI) and payment processors (Stripe). These services receive only the data required to perform their tasks. Each provider offers its own privacy policy.
+      We rely on infrastructure and AI providers (such as OpenAI) and payment processors (Stripe). Screenshot uploads are processed locally unless you opt into remote AI analysis; when shared, we only transmit the minimum data required to fulfil the request. Each provider offers its own privacy policy.
     </p>
 
     <h2>Your rights</h2>
     <p>
-      You can request access, correction, or deletion of your data by emailing <a href="mailto:support@aitrust.com">support@aitrust.com</a>. If you are located in the EU/EEA or UK, you may also object to processing or ask for data portability.
+      You can request access, correction, or deletion of your data by emailing <a href="mailto:arturteplov00@gmail.com">arturteplov00@gmail.com</a>. If you are located in the EU/EEA or UK, you may also object to processing or ask for data portability.
     </p>
 
     <h2>Contact</h2>
     <p>
-      Questions? Contact us at <a href="mailto:support@aitrust.com">support@aitrust.com</a>.
+      If you have questions, you can contact at <a href="mailto:arturteplov00@gmail.com">arturteplov00@gmail.com</a>.
     </p>
   </main>
 </body>
