--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app"></div>
   <footer style="margin-top: 48px; padding: 24px 0; text-align: center; font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; font-size: 12px; color: #6f768c;">
-    By using AI Trust you agree to our <a href="/privacy" style="color: inherit; text-decoration: none; font-weight: 600;">Privacy Policy</a> and <a href="/terms" style="color: inherit; text-decoration: none; font-weight: 600;">Terms</a>.
+    By using AI Trust you agree to our <a href="/privacy" style="color: inherit; text-decoration: none; font-weight: 600;">Privacy Policy</a> and <a href="/terms" style="color: inherit; text-decoration: none; font-weight: 600;">Terms</a>. Reports are non-refundable.
   </footer>
   <script defer src="app.js"></script>
 </body>
