--- a/public/terms.html
+++ b/public/terms.html
@@ -60,7 +60,7 @@
 
     <h2>Services</h2>
     <p>
-      AI Trust provides AI-powered advisory tooling and optional builder exports. We may update, suspend, or discontinue features at any time.
+      AI Trust currently delivers heuristic scorecards and PDF playbooks based on the inputs you provide. During this phase the reports are curated from templates and heuristics; uploads help us tailor messaging but are not guaranteed to be analysed by a model in real time. All outputs are informational and should be reviewed by you before implementation.
     </p>
 
     <h2>Accounts and access</h2>
@@ -77,7 +77,7 @@
 
     <h2>Payment and billing</h2>
     <p>
-      Paid plans are billed via Stripe. Subscription renewals occur automatically unless cancelled before the renewal date. We reserve the right to change pricing with notice.
+      Paid plans are billed via Stripe. Subscription renewals occur automatically unless cancelled before the renewal date. All purchases— including one-time report downloads—are final and non-refundable. We reserve the right to change pricing with notice.
     </p>
 
     <h2>Intellectual property</h2>
@@ -87,7 +87,7 @@
 
     <h2>Disclaimers</h2>
     <p>
-      AI Trust provides guidance “as-is” without warranties of accuracy or fitness. You are responsible for verifying advice before implementing it in production.
+      AI Trust provides guidance “as-is” without warranties of accuracy or fitness. Reports may include generated or template-based recommendations that should be treated as illustrative, not definitive. You are responsible for verifying advice before implementing it in production.
     </p>
 
     <h2>Limitation of liability</h2>
@@ -107,7 +107,7 @@
 
     <h2>Contact</h2>
     <p>
-      Questions? Email <a href="mailto:support@aitrust.com">support@aitrust.com</a>.
+      If you have questions, you can email at <a href="mailto:arturteplov00@gmail.com">arturteplov00@gmail.com</a>.
     </p>
   </main>
 </body>
